--- a/angular.json
+++ b/angular.json
@@ -136,7 +136,8 @@
   "cli": {
     "schematicCollections": [
       "@ionic/angular-toolkit"
-    ]
+    ],
+    "analytics": "33209599-8ecb-478c-bb22-fd9ad297ce6a"
   },
   "schematics": {
     "@ionic/angular-toolkit:component": {
